mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v6__test__snapshot_v6_settings.snap
---
source: mullvad-daemon/src/migrations/v6.rs
expression: v6
---
{
  "allow_lan": true,
  "auto_connect": false,
  "block_when_disconnected": false,
  "bridge_settings": {
    "normal": {
      "location": "any"
    }
  },
  "bridge_state": "auto",
  "obfuscation_settings": {
    "selected_obfuscation": "udp2_tcp",
    "udp2tcp": {
      "port": {
        "only": 443
      }
    }
  },
  "relay_settings": {
    "normal": {
      "location": {
        "only": {
          "country": "se"
        }
      },
      "openvpn_constraints": {
        "port": {
          "only": {
            "port": {
              "only": 1195
            },
            "protocol": "udp"
          }
        }
      },
      "tunnel_protocol": "any",
      "wireguard_constraints": {
        "entry_location": "any",
        "ip_version": "any",
        "port": "any",
        "use_multihop": true
      }
    }
  },
  "settings_version": 6,
  "tunnel_options": {
    "dns_options": {
      "custom_options": {
        "addresses": [
          "1.1.1.1",
          "1.2.3.4"
        ]
      },
      "default_options": {
        "block_ads": false,
        "block_trackers": false
      },
      "state": "default"
    },
    "generic": {
      "enable_ipv6": false
    },
    "openvpn": {
      "mssfix": null
    },
    "wireguard": {
      "mtu": null,
      "rotation_interval": {
        "nanos": 0,
        "secs": 86400
      },
      "use_pq_safe_psk": false
    }
  }
}
